examples/test/testpolicy7460.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7460
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key13: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value29
          key7: value5
          key41: value0
      podSelector:
        matchLabels:
          key2: value5
          key42: value22
          key1: value32
